--- a/MunicipalidadMovil/app/src/main/res/layout/activity_nuevo_usuario.xml
+++ b/MunicipalidadMovil/app/src/main/res/layout/activity_nuevo_usuario.xml
@@ -15,7 +15,7 @@
     android:layout_margin="20dp"
     android:orientation="vertical"
     tools:context="pe.edu.upc.municipalidadmovil.NuevoUsuarioActivity">
-
+    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -49,7 +49,7 @@
             android:text="Tomar foto"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:id="@+id/btnTomarFotoUsuarioN"/>
+            android:id="@+id/btnFotoUsuario"/>
 
         <Button
             android:layout_width="180dp"
